--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@vuepic/vue-datepicker": "^10.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
